# libmo.cpp

./: .gitmodules  CMakeLists.txt  LICENSE  ReadMe.md
include/libmo/: mo.hpp
lib/: CMakeLists.txt  database.cpp  database.hpp  gettext_mo.cpp  gettext_mo.h  libintl_funcs.cpp  libintl_funcs.h
